--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -57,11 +57,8 @@
 .modal-title {
   margin-bottom: 12px;
 
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 1.15;
+  @include font(700, 20px, 1.15, 0.03em);
   text-align: center;
-  letter-spacing: 0.03em;
   color: var(--main-header-text-color);
 }
 
@@ -88,9 +85,7 @@
   margin-bottom: 4px;
   display: block;
 
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
+  @include font(400, 12px, 1.17, 0.01em);
   color: var(--main-text-color);
 }
 
@@ -127,14 +122,12 @@
 .modal-form-text {
   width: 100%;
   height: 120px;
+  padding: 12px 16px 12px 16px;
+  @include font(400, 12px, 1.17, 0.01em);
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
   border-radius: 4px;
   resize: none;
-  padding: 12px 16px 12px 16px;
-  font-size: 12px;
-  line-height: 14px;
-  letter-spacing: 0.01em;
   &::placeholder {
     color: rgba(117, 117, 117, 0.5);
   }
@@ -151,19 +144,18 @@
 
 .check-text {
   @include flex;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
+  @include font(400, 14px, 1.71, 0.03em);
   color: var(--main-text-color);
 }
 
 .check-item {
-  @include flex;
+  margin-right: 7px;
   width: 16px;
   height: 15px;
+  @include flex;
   border: 2px solid var(--main-header-text-color);
   border-radius: 2px;
-  margin-right: 7px;
+  
 }
 
 .check-icon {
@@ -185,10 +177,7 @@
   border: 0;
   cursor: pointer;
   background-color: var(--accent-color);
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
+  @include font(700, 16px, 1.87, 0.06em);
   color: var(--main-btn-color);
   border-radius: 4px;
   transition: color 250ms linear, background-color 250ms linear;
