--- a/sass/layout/_customers.scss
+++ b/sass/layout/_customers.scss
@@ -4,7 +4,7 @@
   background-color: var(--main-btn-color);
 }
 
-.customers-title {
+.customers__title {
   text-align: center;
   margin-bottom: 50px;
 
@@ -12,16 +12,16 @@
   color: var(--second-title-color);
 }
 
-.customers-list {
+.customers__list {
   display: flex;
   justify-content: space-between;
 }
 
-.customers-item {
+.customers__item {
   display: flex;
 }
 
-.customers-link {
+.customers__link {
   @include flex;
   width: 170px;
   height: 92px;
@@ -42,7 +42,7 @@
   }
 }
 
-.customers-svg {
+.customers__svg {
   display: flex;
   width: 106px;
   height: 60px;
