--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,30 +4,30 @@
   background-color: var(--footer-bg-color);
 }
 
-.footer-container {
+.footer__container {
   display: flex;
 }
 
-.footer-web-logo {
+.footer__web-logo {
   font-family: Raleway;
   font-style: normal;
   @include font(700, 26px, 1.2, 0.03em);
   color: var(--accent-color);
 }
 
-.footer-Studio-logo {
+.footer__Studio-logo {
   color: var(--main-title-color);
 }
 
-.footer-address {
+.footer__address {
   margin-top: 20px;
 }
 
-.footer-item:not(:last-child) {
+.footer__item:not(:last-child) {
   margin-bottom: 9px;
 }
 
-.footer-link {
+.footer__link {
   font-style: normal;
   @include font(400, 14px, 1.71, 0.03em);
   color: #ffffff;
@@ -39,17 +39,17 @@
   }
 }
 
-.footer-container-link {
+.footer__container-link {
   margin-left: 70px;
 }
 
-.footer-container-link-title {
+.footer__container-link__title {
   @include font(400, 14px, 1.14, 100%);
   vertical-align: Top;
   color: var(--main-title-color);
 }
 
-.footer-mailto {
+.footer__mailto {
   font-style: normal;
   @include font(400, 14px, 1.71, 0.03em);
   color: var(--second-text-color);
@@ -61,7 +61,7 @@
   }
 }
 
-.footer-tel {
+.footer__tel {
   font-style: normal;
   @include font(400, 14px, 1.71, 0.03em);
   color: var(--second-text-color);
@@ -73,11 +73,11 @@
   }
 }
 
-.footer-social-list {
+.footer__social-list {
   display: flex;
 }
 
-.footer-social-link {
+.footer__social-link {
   @include flex;
   width: 100%;
   height: 100%;
@@ -95,7 +95,7 @@
   }
 }
 
-.footer-social-item {
+.footer__social-item {
   margin-top: 20px;
   width: 44px;
   height: 44px;
@@ -104,19 +104,19 @@
   }
 }
 
-.footer-social-icon {
+.footer__social-icon {
   fill: currentColor;
 }
 
-.footer-container-subscription {
+.footer__container-subscription {
   margin-left: 93px;
 }
 
-.footer-subscription {
+.footer__subscription {
   display: flex;
 }
 
-.footer-subscription-title {
+.footer__subscription-title {
   display: block;
   margin-bottom: 20px;
 
@@ -125,7 +125,7 @@
   color: var(--main-title-color);
 }
 
-.footer-subscription-text {
+.footer__subscription-text {
   width: 358px;
   height: 50px;
   padding-left: 16px;
@@ -141,7 +141,7 @@
   }
 }
 
-.subscription-btn {
+.footer__subscription-btn {
   @include flex;
   margin-left: 12px;
   width: 200px;
@@ -166,7 +166,7 @@
   }
 }
 
-.subscription-icon {
+.footer__subscription-icon {
   margin-left: 10px;
   fill: currentColor;
 }
