--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -4,11 +4,11 @@
   background-color: var(--second-section-color);
 }
 
-.team-container {
+.team__container {
   text-align: center;
 }
 
-.team-title {
+.team__title {
   width: 265px;
   text-align: center;
   margin-left: auto;
@@ -19,36 +19,36 @@
   color: #212121;
 }
 
-.team-list {
+.team__list {
   display: flex;
 }
 
-.team-item-title {
+.team__item-title {
   @include font(500, 16px, 1.19, 0.03em);
   color: var(--second-title-color);
 }
 
-.team-item-text {
+.team__item-text {
   @include font(400, 16px, 1.19, 0.03em);
   color: var(--main-text-color);
 }
 
-.team-item:not(:last-child) {
+.team__item:not(:last-child) {
   margin-right: 30px;
 }
 
-.team-item-text {
+.team__item-text {
   padding-top: 10px;
   margin-bottom: 16px;
 }
 
-.team-item-img {
+.team__item-img {
   display: block;
   max-width: 100%;
   height: auto;
 }
 
-.team-card-image {
+.team__card-image {
   display: block;
   padding-top: 30px;
   padding-bottom: 30px;
@@ -60,22 +60,22 @@
     0px 1px rgba(0, 0, 0, 0.12);
 }
 
-.team-social-list {
+.team__social-list {
   display: flex;
   justify-content: center;
 }
 
-.team-social-item {
+.team__social-item {
   width: 44px;
   height: 44px;
   + {
-    .team-social-item {
+    .team__social-item {
       margin-left: 10px;
     }
   }
 }
 
-.team-social-link {
+.team__social-link {
   @include flex;
   width: 100%;
   height: 100%;
@@ -91,6 +91,6 @@
   }
 }
 
-.team-social-icon {
+.team__social-icon {
   fill: currentColor;
 }
