--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -15,3 +15,10 @@
   line-height: $lh;
   letter-spacing: $ls;
 }
+
+@mixin flex-text() {
+  display: flex;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+}
